--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -61,6 +61,7 @@ stages:
     dependsOn: Build
     jobs:
       - deployment: DeployToAKS
+        environment: 'aks-prod'
         pool:
           vmImage: 'ubuntu-latest'
         strategy:
