--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -7,6 +7,8 @@ spec:
   selector:
     matchLabels:
       app: bible-app
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
